# mender-flash

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LIC_FILES_CHKSUM.sha256  Makefile  config.h.in  main.c  main.cpp  main_test.cpp  tests.sh
common/: common.cpp  error.cpp  error.hpp  io.hpp
flash_test/: optimized_writer_test.cpp  platformfs_test.cpp
libflash/: .gitignore  fileio.cpp  fileio.hpp  optimized_writer.cpp  optimized_writer.hpp  platformfs.cpp  platformfs.h  platformfs.hpp
